# vtk-python-wrap

./: CMakeLists.txt  LICENSE  README.md  module.cmake
CMake/: vtkMYPROJECTBuild.h.in  vtkMYPROJECTConfig.h.in  vtkMYPROJECTModule.h.in
Source/: CMakeLists.txt
Testing/: CMakeLists.txt  TestInteractorStyleGame.cxx
src/: CMakeLists.txt  myproject.module
